--- a/index.html
+++ b/index.html
@@ -7,40 +7,26 @@
     </head>
     <body>
         <div class="one">
-            <div class="content-container">
-                <div class="header">
-                    <p>Header Logo</p>
-                    <ul class="header-links">
-                        <li>header link one</li>
-                        <li>header link two</li>
-                        <li>header link three</li>
-                    </ul>
-                </div>
-                <div class="media-container">
-                    <div class="content-placeholder">
-                        <h1>This website is awesome</h1>
-                        <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
-                        <button>Sign up</button>
-                    </div>
-                    <div class="image-placeholder">
-                        <p>this is a placeholder for an image</p>
-                    </div>
-                </div>
+            <div class="header">
+
+            </div>
+            <div class="content">
+
             </div>
         </div>
         <div class="two">
-            <div class="content-container">
+            <div class="content">
 
             </div>
         </div>
         <div class="three">
-            <div class="content-container">
-
+            <div class="content">
+                
             </div>
         </div>
         <div class="four">
-            <div class="content-container">
-
+            <div class="content">
+                
             </div>
         </div>
     </body>
