--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </div>
         <div class="four">
             <div class="content">
-                
+                <div class="footer"></div>
             </div>
         </div>
     </body>
