--- a/index.html
+++ b/index.html
@@ -7,11 +7,27 @@
     </head>
     <body>
         <div class="one">
-            <div class="header">
-
-            </div>
-            <div class="content">
-
+            <div class="container">
+                <div class="header">
+                    <p>Header Logo</p>
+                    <ul>
+                        <li><a href="">header link one</a></li>
+                        <li><a href="">header link two</a></li>
+                        <li><a href="">header link three</a></li>
+                    </ul>
+                </div>
+                <div class="content">
+                    <div class="media">
+                        <div class="text-content">
+                            <h1>This website is awesome</h1>
+                            <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
+                            <button>Sign up</button>
+                        </div>
+                        <div class="image-content">
+                            <p>this is a placeholder for an image</p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="two">
