Add unstyled contents to second section

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <div class="one">
             <div class="container">
                 <div class="header">
-                    <p>Header Logo</p>
+                    <h3>Header Logo</h3>
                     <ul>
                         <li><a href="">header link one</a></li>
                         <li><a href="">header link two</a></li>
@@ -31,8 +31,26 @@
             </div>
         </div>
         <div class="two">
-            <div class="content">
-
+            <div class="container">
+                <h2>Some random information.</h2>
+                <div class="content">
+                    <div class="info-card">
+                        <div class="image-content"></div>
+                        <p class="text-content">this is some subtext under an illustration or image</p>
+                    </div>
+                    <div class="info-card">
+                        <div class="image-content"></div>
+                        <p class="text-content">this is some subtext under an illustration or image</p>
+                    </div>
+                    <div class="info-card">
+                        <div class="image-content"></div>
+                        <p class="text-content">this is some subtext under an illustration or image</p>
+                    </div>
+                    <div class="info-card">
+                        <div class="image-content"></div>
+                        <p class="text-content">this is some subtext under an illustration or image</p>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="three">
