Add unstyled contents to third section of layout

--- a/index.html
+++ b/index.html
@@ -54,8 +54,11 @@
             </div>
         </div>
         <div class="three">
-            <div class="content">
-                
+            <div class="container">
+                <div class="content">
+                    <p class="quote-content">Hard times create strong men. Strong men create good times. Good times create weak men. Weak men create hard times.</p>
+                    <p class="quote-author">-G. Michael Hopf</p>
+                </div>
             </div>
         </div>
         <div class="four">
