--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <div class="three">
             <div class="container">
                 <div class="content">
-                    <p class="quote-content">Hard times create strong men. Strong men create good times. Good times create weak men. Weak men create hard times.</p>
+                    <p class="quote-content"><em>Hard times create strong men. Strong men create good times. Good times create weak men. Weak men create hard times.</em></p>
                     <p class="quote-author">-G. Michael Hopf</p>
                 </div>
             </div>
