--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
         </div>
         <div class="four">
             <div class="content">
-                <div class="footer"></div>
+            </div>
+            <div class="footer">
             </div>
         </div>
     </body>
