--- a/index.html
+++ b/index.html
@@ -64,10 +64,17 @@
         <div class="four">
             <div class="container">
                 <div class="content">
-
+                    <div class="media">
+                        <div class="text-content">
+                            <h5>Call to action! It's time!</h5>
+                            <p>Sign up for our product by clicking that button right over there!</p>
+                        </div>
+                        <button>Sign up</button>
+                    </div>
                 </div>
             </div>
             <div class="footer">
+                <p>Copyright @ The Odin Project 2024</p>
             </div>
         </div>
     </body>
